commit nos arquivos

--- a/converteImgParaString.htm
+++ b/converteImgParaString.htm
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title> - jsFiddle demo by victorvhpg</title>
+ 
   
-  <script type="text/javascript" src="-%20jsFiddle%20demo%20by%20victorvhpg_arquivos/jquery-1.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   
-  <link rel="stylesheet" type="text/css" href="-%20jsFiddle%20demo%20by%20victorvhpg_arquivos/normalize.css">
-  <link rel="stylesheet" type="text/css" href="-%20jsFiddle%20demo%20by%20victorvhpg_arquivos/result-light.css">
+ 
   
   <style type="text/css">
     body{
